--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
     <link href="/css/my-rtl-custom-style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/libs/jquery-3.1.1.min.js" />
     <link rel="stylesheet" href="/material-dashboard.css.map" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="/myStyle.css" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <title>Froshgah</title>
   </head>
