--- a/public/index.html
+++ b/public/index.html
@@ -11,34 +11,55 @@
     <link rel="stylesheet" type="text/css" href="/fonts.css" />
     <link rel="stylesheet" href="/font-awesome.min.css" />
     <!-- Material Kit CSS -->
-    <link href="/material-dashboard.css" rel="stylesheet" />
+    <!-- CSS Files -->
+
+    <link href="/css/css/bootstrap-rtl.css" rel="stylesheet" />
+    <link href="/css/css/material-dashboard.css" rel="stylesheet" />
     <link rel="stylesheet" href="/material-dashboard.min.css" />
-    <!-- <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css" /> -->
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link href="/css/css/demo.css" rel="stylesheet" />
+
     <link href="/css/my-rtl-custom-style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/libs/jquery-3.1.1.min.js" />
     <link rel="stylesheet" href="/material-dashboard.css.map" />
     <link rel="stylesheet" href="/myStyle.css" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <title>Froshgah</title>
   </head>
-  <body class="ir-r">
+  <body class="ir-r" ->
     <div id="root"></div>
     <!--   Core JS Files   -->
     <script src="/assets/js/core/jquery.min.js"></script>
     <script src="/assets/js/core/popper.min.js"></script>
-    <script src="/assets/js/core/bootstrap-material-design.min.js"></script>
     <script src="/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/assets/js/core/bootstrap-material-design.min.js"></script>
+
+    <!--  -->
+    <script src="/assets/js/plugins/moment.min.js"></script>
     <!--  Google Maps Plugin    -->
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Chartist JS -->
     <script src="/assets/js/plugins/chartist.min.js"></script>
+    <script src="/assets/js/plugins/sweetalert2.js"></script>
+    <script src="/assets/js/plugins/jquery.validate.min.js"></script>
+    <script src="/assets/js/plugins/jquery.bootstrap-wizard.js"></script>
+    <script src="/assets/js/plugins/bootstrap-selectpicker.js"></script>
+    <script src="/assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
+    <script src="/assets/js/plugins/jquery.dataTables.min.js"></script>
+    <script src="/assets/js/plugins/bootstrap-tagsinput.js"></script>
+    <script src="/assets/js/plugins/jasny-bootstrap.min.js"></script>
+    <script src="/assets/js/plugins/fullcalendar.min.js"></script>
+    <script src="/assets/js/plugins/jquery-jvectormap.js"></script>
+    <script src="/assets/js/plugins/nouislider.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
+    <script src="/assets/js/plugins/arrive.min.js"></script>
+    <script src="/assets/js/plugins/chartist.min.js"></script>
+
     <!--  Notifications Plugin    -->
     <script src="/assets/js/plugins/bootstrap-notify.js"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script
-      src="/assets/js/material-dashboard.js?v=2.1.2"
+      src="/assets/js/material-dashboard.js"
       type="text/javascript"
     ></script>
     <!-- Material Dashboard DEMO methods, don't include it in your project! -->
@@ -243,10 +264,6 @@
     <script>
       $(document).ready(function () {
         md.checkFullPageBackgroundImage();
-        setTimeout(function () {
-          // after 1000 ms we add the class animated to the login/register card
-          $(".card").removeClass("card-hidden");
-        }, 700);
       });
     </script>
   </body>
