--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="/libs/jquery-3.1.1.min.js" />
     <link rel="stylesheet" href="/material-dashboard.css.map" />
     <link rel="stylesheet" href="/myStyle.css" />
-
+    <script src="/assets/js/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Froshgah</title>
   </head>
   <body class="ir-r" ->
